syntax = "proto3";

import "common.proto";
import "resource.proto";

option csharp_namespace = "AElf.Contracts.Resource";

message ConnectorPair
{
    uint64 ResBalance = 1;
    uint64 ElfBalance = 2;
}

message UserResourceKey
{
    Address Address = 1;
    ResourceType Type = 2;
}
